Sending subscription/friend requests and responding to them.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -7,6 +7,8 @@
   "add-friend" : "Add to friends",
   "add-group" : "Add group",
   "additional" : "Additional",
+  "add-me-friend-group" : "Add me to the group of friends \"{group}\"",
+  "add-me-friends" : "Add me to friends",
   "addons-changed-conflict" : "List of add-ons has been changed.",
   "alert-text" : "Alert text",
   "align" : "Align",
@@ -15,6 +17,9 @@
   "allowed-support-reactions" : "Allowed \"Support\" reactions",
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
+  "ask" : "Ask",
+  "ask-ellipsis" : "Ask...",
+  "ask-node" : "Ask {name}",
   "auto" : "Auto",
   "auto-hide-comments" : "Automatically hide comments",
   "avatar" : "Avatar",
@@ -35,6 +40,7 @@
   "change-home-password" : "Change Home Password",
   "change-password" : "Change Password",
   "change-password-ellipsis" : "Change Password...",
+  "choose-request" : "Choose a request...",
   "client-settings-changed-conflict" : "Client settings were changed by somebody.",
   "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "clock-differ" : "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
@@ -206,6 +212,9 @@
       "user" : "you subscribed to"
     },
     "story" : {
+      "asked-to-friend" : "{node} has asked you to add {gender, select, male {him} female {her} other {them}} to your friends",
+      "asked-to-friend-group" : "{node} has asked you to add {gender, select, male {him} female {her} other {them}} to your group of friends \"{group}\"",
+      "asked-to-subscribe" : "{node} has asked you to subscribe to {gender, select, male {his} female {her} other {their}} feed",
       "comment-added" : "{comments} commented on your post {heading}",
       "comment-media-reaction-added" : "{reactions} a media in your comment {heading} on {posting}",
       "comment-media-reaction-failed" : "Failed to sign a reaction to a media in {commentNode} comment {commentHeading} to {postingNode} post {postingHeading}",
@@ -256,6 +265,7 @@
   "mark-unread" : "Mark as Unread",
   "mention" : "Mention",
   "mention-copied" : "Mention copied to the clipboard",
+  "message" : "Message",
   "more-links" : "{count} {count, plural, one {link} other {links}}",
   "more-reactions" : "{remaining} more",
   "more-reactions-hidden" : "{remaining} more hidden",
@@ -272,6 +282,7 @@
   "name-operation-started" : "Name operation started",
   "name-or-node-url" : "Blog name or URL",
   "name-or-node-url-not-valid" : "Blog name or URL is not valid",
+  "need-to-choose" : "Need to be chosen",
   "new-password" : "New password",
   "new-post-button" : "New post",
   "new-post-item" : "New post",
@@ -598,6 +609,7 @@
   "subscribe-back" : "Subscribe back",
   "subscribed" : "Subscribed",
   "subscribed-to-me" : "Subscribed to me",
+  "subscribe-me" : "Subscribe to me",
   "subscribers" : "Subscribers",
   "subscriptions" : "Subscriptions",
   "summary" : "Summary",
