--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -7,6 +7,8 @@
   "add-friend" : "Добавить в друзья",
   "add-group" : "Добавить группу",
   "additional" : "Дополнительные",
+  "add-me-friend-group" : "Добавить меня в группу друзей \"{group}\"",
+  "add-me-friends" : "Добавить меня в друзья",
   "addons-changed-conflict" : "Список дополнений был изменён.",
   "alert-text" : "Текст предупреждения",
   "align" : "Выравнивание",
@@ -15,6 +17,9 @@
   "allowed-support-reactions" : "Разрешённые одобрительные реакции",
   "alt-text" : "Альтернативный текст",
   "alt-text-button" : "Альт. текст",
+  "ask" : "Попросить",
+  "ask-ellipsis" : "Попросить...",
+  "ask-node" : "Попросить {name}",
   "auto" : "Авто",
   "auto-hide-comments" : "Автоматически скрывать комментарии",
   "avatar" : "Аватар",
@@ -35,6 +40,7 @@
   "change-home-password" : "Изменить домашний пароль",
   "change-password" : "Изменить пароль",
   "change-password-ellipsis" : "Изменить пароль...",
+  "choose-request" : "Выберите просьбу...",
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
   "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ" : "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
@@ -206,6 +212,9 @@
       "user" : "на который вы подписаны"
     },
     "story" : {
+      "asked-to-friend" : "{node} {gender, select, female {попросила} other {попросил}} вас добавить {gender, select, female {её} other {его}} к себе в друзья",
+      "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросил}} вас добавить {gender, select, female {её} other {его}} в свою группу друзей \"{group}\"",
+      "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросил}} вас подписаться на {gender, select, female {её} other {его}} ленту",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокомментировала} other {прокомментировал}}} other {прокомментировали}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку в вашем комментарии {heading} к {posting}",
       "comment-media-reaction-failed" : "Не удалось подписать реакцию на картинку в комментарии {commentNode} {commentHeading} к посту {postingNode} {postingHeading}",
@@ -256,6 +265,7 @@
   "mark-unread" : "Отметить как непрочитанное",
   "mention" : "Упомянуть",
   "mention-copied" : "Упоминание скопировано в буфер обмена",
+  "message" : "Сообщение",
   "more-links" : "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
   "more-reactions" : "Ещё {remaining}",
   "more-reactions-hidden" : "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
@@ -272,6 +282,7 @@
   "name-operation-started" : "Операция над именем запущена",
   "name-or-node-url" : "Имя или URL блога",
   "name-or-node-url-not-valid" : "Неверное имя или URL блога",
+  "need-to-choose" : "Нужно выбрать",
   "new-password" : "Новый пароль",
   "new-post-button" : "Написать",
   "new-post-item" : "Новый пост",
@@ -598,6 +609,7 @@
   "subscribe-back" : "Подписаться в ответ",
   "subscribed" : "{gender, select, female {Подписана} other {Подписан}}",
   "subscribed-to-me" : "{gender, select, female {Подписана} other {Подписан}} на меня",
+  "subscribe-me" : "Подписаться на меня",
   "subscribers" : "Подписчики",
   "subscriptions" : "Подписки",
   "summary" : "Коротко",
