--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -7,6 +7,8 @@
   "add-friend" : "Додати у друзі",
   "add-group" : "Додати групу",
   "additional" : "Додаткові",
+  "add-me-friend-group" : "Додати мене до групи друзів \"{group}\"",
+  "add-me-friends" : "Додати мене до друзів",
   "addons-changed-conflict" : "Список додатків був змінений.",
   "alert-text" : "Текст попередження",
   "align" : "Вирівнювання",
@@ -15,6 +17,9 @@
   "allowed-support-reactions" : "Дозволені схвальні реакції",
   "alt-text" : "Альтернативний текст",
   "alt-text-button" : "Альт. текст",
+  "ask" : "Попросити",
+  "ask-ellipsis" : "Попросити...",
+  "ask-node" : "Попросити {name}",
   "auto" : "Авто",
   "auto-hide-comments" : "Автоматично приховувати коментарі",
   "avatar" : "Аватар",
@@ -35,6 +40,7 @@
   "change-home-password" : "Змінити домашній пароль",
   "change-password" : "Змінити пароль",
   "change-password-ellipsis" : "Змінити пароль...",
+  "choose-request" : "Виберіть прохання...",
   "client-settings-changed-conflict" : "Налаштування клієнта були кимось змінені.",
   "clipboard-contains-formatting" : "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ" : "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
@@ -206,6 +212,9 @@
       "user" : "на який ви підписані"
     },
     "story" : {
+      "asked-to-friend" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до себе у друзі",
+      "asked-to-friend-group" : "{node} {gender, select, female {попросила} other {попросив}} вас додати {gender, select, female {її} other {його}} до своєї групи друзів \"{group}\"",
+      "asked-to-subscribe" : "{node} {gender, select, female {попросила} other {попросив}} вас підписатись на {gender, select, female {її} other {його}} стрічку",
       "comment-added" : "{comments} {count, plural, =1 {{gender, select, female {прокоментувала} other {прокоментував}}} other {прокоментували}} ваш пост {heading}",
       "comment-media-reaction-added" : "{reactions} картинку у вашому коментарі {heading} до {posting}",
       "comment-media-reaction-failed" : "Не вдалося підписати реакцію на картинку в коментарі {commentNode} {commentHeading} до посту {postingNode} {postingHeading}",
@@ -256,6 +265,7 @@
   "mark-unread" : "Позначити як непрочитане",
   "mention" : "Згадати",
   "mention-copied" : "Згадка скопійована до буфера обміну",
+  "message" : "Повідомлення",
   "more-links" : "{count} {count, plural, one {посилання} few {посилання} other {посилань}}",
   "more-reactions" : "Ще {remaining}",
   "more-reactions-hidden" : "Ещё {remaining} {remaining, plural, one {прихована} other {прихованих}}",
@@ -272,6 +282,7 @@
   "name-operation-started" : "Операцію над ім'ям запущено",
   "name-or-node-url" : "Ім'я чи URL блога",
   "name-or-node-url-not-valid" : "Неправильне ім'я або URL блога",
+  "need-to-choose" : "Треба вибрати",
   "new-password" : "Новий пароль",
   "new-post-button" : "Написати",
   "new-post-item" : "Новий пост",
@@ -598,6 +609,7 @@
   "subscribe-back" : "Підписатись у відповідь",
   "subscribed" : "{gender, select, female {Підписана} other {Підписаний}}",
   "subscribed-to-me" : "{gender, select, female {Підписана} other {Підписаний}} на мене",
+  "subscribe-me" : "Підписатись на мене",
   "subscribers" : "Підписники",
   "subscriptions" : "Підписки",
   "summary" : "Коротко",
