--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -154,6 +154,7 @@
   "formatting-hint" : "<0>Markdown:</0> загляните в <1>шпаргалку</1> или <2>учебник</2>, чтобы узнать о других возможностях. См. также <3>шпаргалку по эмодзи</3>.",
   "friend" : "Друг",
   "friend-groups" : "Группы друзей...",
+  "friend-groups.friends" : "Друзья",
   "from-computer" : "С компьютера",
   "from-device" : "С устройства",
   "from-internet" : "Из Интернета",
