--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -154,6 +154,7 @@
   "formatting-hint" : "<0>Markdown:</0> зазирніть у <1>шпаргалку</1> чи <2>підручник</2>, щоб дізнатися про інші можливості. Див. також <3>шпаргалку з емодзі</3>.",
   "friend" : "Друг",
   "friend-groups" : "Групи друзів...",
+  "friend-groups.friends" : "Друзі",
   "from-computer" : "З комп'ютера",
   "from-device" : "З пристрою",
   "from-internet" : "З Інтернету",
