Selecting people on People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -41,6 +41,7 @@
   "change-password" : "Change Password",
   "change-password-ellipsis" : "Change Password...",
   "choose-request" : "Choose a request...",
+  "clear-selection" : "Clear selection",
   "client-settings-changed-conflict" : "Client settings were changed by somebody.",
   "clipboard-contains-formatting" : "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "clock-differ" : "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
@@ -71,6 +72,7 @@
   "count-more" : "{count} more",
   "count-new" : "{count} new",
   "count-posts" : "<0>{count}</0> {count, plural, one {post} other {posts}}",
+  "count-selected" : "{count} selected",
   "count-subscribers" : "<0>{count}</0> {count, plural, one {subscriber} other {subscribers}}",
   "count-subscriptions" : "<0>{count}</0> {count, plural, one {subscription} other {subscriptions}}",
   "create" : "Create",
@@ -432,6 +434,7 @@
   "save" : "Save",
   "secret-code" : "Secret code",
   "secret-words" : "Secret Words",
+  "select" : "Select",
   "select-all" : "Select all",
   "selected-automatically" : "Selected automatically",
   "selected-preferred" : "Selected are preferred",
