--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -41,6 +41,7 @@
   "change-password" : "Изменить пароль",
   "change-password-ellipsis" : "Изменить пароль...",
   "choose-request" : "Выберите просьбу...",
+  "clear-selection" : "Отменить выбор",
   "client-settings-changed-conflict" : "Настройки клиента были кем-то изменены.",
   "clipboard-contains-formatting" : "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ" : "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
@@ -71,6 +72,7 @@
   "count-more" : "Ещё {count}",
   "count-new" : "{count} {count, plural, one {новый} other {новых}}",
   "count-posts" : "<0>{count}</0> {count, plural, one {пост} few {поста} other {постов}}",
+  "count-selected" : "{count} {count, plural, one {выбран} other {выбрано}}",
   "count-subscribers" : "<0>{count}</0> {count, plural, one {подписчик} few {подписчика} other {подписчиков}}",
   "count-subscriptions" : "<0>{count}</0> {count, plural, one {подписка} few {подписки} other {подписок}}",
   "create" : "Создать",
@@ -432,6 +434,7 @@
   "save" : "Сохранить",
   "secret-code" : "Секретный код",
   "secret-words" : "Секретные слова",
+  "select" : "Выбрать",
   "select-all" : "Выбрать все",
   "selected-automatically" : "Выбирается автоматически",
   "selected-preferred" : "Выбранные предпочтительны",
