--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -41,6 +41,7 @@
   "change-password" : "Змінити пароль",
   "change-password-ellipsis" : "Змінити пароль...",
   "choose-request" : "Виберіть прохання...",
+  "clear-selection" : "Відмінити вибір",
   "client-settings-changed-conflict" : "Налаштування клієнта були кимось змінені.",
   "clipboard-contains-formatting" : "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ" : "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
@@ -71,6 +72,7 @@
   "count-more" : "Ще {count}",
   "count-new" : "{count} {count, plural, one {новий} other {нових}}",
   "count-posts" : "<0>{count}</0> {count, plural, one {пост} few {поста} other {постів}}",
+  "count-selected" : "{count} {count, plural, one {обраний} other {обрано}}",
   "count-subscribers" : "<0>{count}</0> {count, plural, one {підписник} few {підписника} other {підписників}}",
   "count-subscriptions" : "<0>{count}</0> {count, plural, one {підписка} few {підписки} other {підписок}}",
   "create" : "Створити",
@@ -432,6 +434,7 @@
   "save" : "Зберегти",
   "secret-code" : "Секретний код",
   "secret-words" : "Секретні слова",
+  "select" : "Обрати",
   "select-all" : "Обрати все",
   "selected-automatically" : "Обирається автоматично",
   "selected-preferred" : "Обрані мають перевагу",
