Showing progress of mass operations on People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -337,6 +337,7 @@
   "posting-not-found" : "Post is not found or cannot be displayed.",
   "posting-updated-at" : "updated",
   "post-preview" : "Post Preview",
+  "preparing" : "Preparing...",
   "preserve-formatting" : "Preserve formatting",
   "preview" : "Preview",
   "previous-image" : "Previous image",
@@ -350,6 +351,7 @@
   },
   "profile" : "Profile",
   "profile-edited-conflict" : "Profile was edited by somebody.",
+  "progress" : "{done} of {total} done",
   "provider" : "Provider",
   "provider-setting" : "(provider setting)",
   "qr-code" : "QR Code",
