--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -337,6 +337,7 @@
   "posting-not-found" : "Пост не найден или не может быть показан.",
   "posting-updated-at" : "изменён",
   "post-preview" : "Предпросмотр поста",
+  "preparing" : "Подготовка...",
   "preserve-formatting" : "Сохранить форматирование",
   "preview" : "Просмотр",
   "previous-image" : "Предыдущая картинка",
@@ -350,6 +351,7 @@
   },
   "profile" : "Профиль",
   "profile-edited-conflict" : "Профиль был кем-то отредактирован.",
+  "progress" : "{done} из {total} готово",
   "provider" : "Провайдер",
   "provider-setting" : "(устанавливается провайдером)",
   "qr-code" : "QR-код",
