--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -337,6 +337,7 @@
   "posting-not-found" : "Пост не знайдений або не може бути показаний.",
   "posting-updated-at" : "змінений",
   "post-preview" : "Перегляд поста",
+  "preparing" : "Підготовка...",
   "preserve-formatting" : "Зберегти форматування",
   "preview" : "Перегляд",
   "previous-image" : "Попередня картинка",
@@ -350,6 +351,7 @@
   },
   "profile" : "Профіль",
   "profile-edited-conflict" : "Профіль був кимось відредагований.",
+  "progress" : "{done} з {total} зроблено",
   "provider" : "Провайдер",
   "provider-setting" : "(встановлюється провайдером)",
   "qr-code" : "QR-код",
