Mass asking operations on the People page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -18,6 +18,7 @@
   "alt-text" : "Alternative text",
   "alt-text-button" : "Alt text",
   "ask" : "Ask",
+  "ask-count" : "Ask {count} {count, plural, one {user} other {users}}",
   "ask-ellipsis" : "Ask...",
   "ask-node" : "Ask {name}",
   "auto" : "Auto",
