--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -38,6 +38,7 @@
   "change-date-time" : "Change Date/Time",
   "change-date-time-ellipsis" : "Change date/time...",
   "change-friend-groups" : "Change groups of the friend {name}",
+  "change-groups" : "Change groups of friends",
   "change-home-password" : "Change Home Password",
   "change-password" : "Change Password",
   "change-password-ellipsis" : "Change Password...",
