--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -349,7 +349,8 @@
     "nobody" : "Никому",
     "only-me" : "Только мне",
     "public" : "Для всех",
-    "signed" : "Зарегистрированным"
+    "signed" : "Зарегистрированным",
+    "subscribed" : "Подписки"
   },
   "profile" : "Профиль",
   "profile-edited-conflict" : "Профиль был кем-то отредактирован.",
