--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -349,7 +349,8 @@
     "nobody" : "Нікому",
     "only-me" : "Тільки мені",
     "public" : "Для всіх",
-    "signed" : "Зареєстрованим"
+    "signed" : "Зареєстрованим",
+    "subscribed" : "Підписки"
   },
   "profile" : "Профіль",
   "profile-edited-conflict" : "Профіль був кимось відредагований.",
