Converted <mr-spoiler> to a React component and added translation.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -614,6 +614,7 @@
   "sign-up" : "Sign Up",
   "size" : "Size",
   "spoiler" : "Spoiler",
+  "spoiler-alert" : "spoiler!",
   "strikeout" : "Strikeout",
   "subscribe" : "Subscribe",
   "subscribe-back" : "Subscribe back",
