--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -614,6 +614,7 @@
   "sign-up" : "Регистрация",
   "size" : "Размер",
   "spoiler" : "Спойлер",
+  "spoiler-alert" : "спойлер!",
   "strikeout" : "Зачёркнутый",
   "subscribe" : "Подписаться",
   "subscribe-back" : "Подписаться в ответ",
