--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -614,6 +614,7 @@
   "sign-up" : "Реєстрація",
   "size" : "Розмір",
   "spoiler" : "Спойлер",
+  "spoiler-alert" : "спойлер!",
   "strikeout" : "Закреслений",
   "subscribe" : "Підписатись",
   "subscribe-back" : "Підписатись у відповідь",
