Display warning in the composer, if you're not allowed to post to the current blog.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -338,6 +338,7 @@
   "post-edited-conflict" : "The post was edited by somebody.",
   "posting-not-found" : "Post is not found or cannot be displayed.",
   "posting-updated-at" : "updated",
+  "post-not-allowed" : "You cannot post to this blog.",
   "post-preview" : "Post Preview",
   "preparing" : "Preparing...",
   "preserve-formatting" : "Preserve formatting",
