Added "Tired" reaction.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -412,6 +412,7 @@
     "sad" : "Sad",
     "super" : "Super",
     "sweet" : "Sweet",
+    "tired" : "Tired",
     "too-long" : "Too long",
     "wow" : "Wow"
   },
