--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -412,6 +412,7 @@
     "sad" : "Грустно",
     "super" : "Супер",
     "sweet" : "Очаровательно",
+    "tired" : "Устал",
     "too-long" : "Длинно",
     "wow" : "Ого"
   },
