--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -412,6 +412,7 @@
     "sad" : "Сумно",
     "super" : "Супер",
     "sweet" : "Чарівно",
+    "tired" : "Втомився",
     "too-long" : "Довго",
     "wow" : "Ого"
   },
