Display the latest usage info for tokens.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -256,6 +256,7 @@
   "italic" : "Italic",
   "language" : "Language",
   "last-post" : "last",
+  "last-used" : "Last used:",
   "link" : "Link",
   "link-copied" : "Link copied to the clipboard",
   "links" : "Links",
