--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -256,6 +256,7 @@
   "italic" : "Курсив",
   "language" : "Язык",
   "last-post" : "последний",
+  "last-used" : "Последнее использование:",
   "link" : "Ссылка",
   "link-copied" : "Ссылка скопирована в буфер обмена",
   "links" : "Ссылки",
