--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -256,6 +256,7 @@
   "italic" : "Курсив",
   "language" : "Мова",
   "last-post" : "останній",
+  "last-used" : "Останнє використання:",
   "link" : "Посилання",
   "link-copied" : "Посилання скопійоване до буфера обміну",
   "links" : "Посилання",
