Display the most important info/icon in SubscribeButton.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -311,6 +311,7 @@
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "not-subscribed" : "Not subscribed",
   "not-valid-e-mail" : "Not a valid e-mail address",
   "ok" : "OK",
   "only-selected-allowed" : "Only selected are allowed",
